<resources>

    <string name="app_name">Leg App 2</string>

    <string name="title_activity_localisation">Leg App - Localisation</string>
    <string name="title_activity_ajouter_lieu">Leg App - Ajouter un lieu</string>
    <string name="title_activity_settings">Paramètres</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="localisation">Localisation</string>
    <string name="name">Name</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="type">Type</string>
    <string name="pref_smsText">Texte du SMS</string>
    <string name="pref_smsText_summ">Déterminer le texte du SMS à envoyer</string>
    <string name="pref_smsNum">Numéro destinataire du SMS</string>
    <string name="pref_smsNum_summ">Déterminer le numéro destinataire du SMS à envoyer</string>
    <string name="pref_threshold_summ">Déterminer le seuil de proximité</string>
    <string name="pref_threshold">Seuil de détection</string>
    <string name="pref_threshold_default">1</string>

    <string-array name="pref_threshold_entries">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_threshold_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="typesArray">
        <item>Lumière</item>
        <item>Température</item>
        <item>Taux de CO2</item>
        <item>SMS</item>
    </string-array>



</resources>
