<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/menu_scan" android:title="@string/scan"
        android:orderInCategory="100" android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_stop" android:title="@string/stop"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/menu_localisation" android:title="@string/localisation"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/menu_ajouter_lieu" android:title="@string/title_activity_ajouter_lieu"
        android:orderInCategory="100" android:showAsAction="never" />

</menu>
