<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mohamed.legapp2.AjouterLieu"
    android:weightSum="1">

    <TextView android:text="Liste des lieux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBlue"
        android:textIsSelectable="false" />

    <ListView
        android:id="@android:id/list"
        android:layout_height="144dp"
        android:layout_width="match_parent"
        android:layout_weight="0.67">
    </ListView>

    <TextView android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_alignParentStart="true"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:hint="@string/name"
        android:background="@color/white" />

    <TextView android:text="@string/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/majorEdit"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:hint="@string/major"
        android:background="@color/white" />

    <TextView android:text="@string/minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/minorEdit"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:hint="@string/minor"
        android:background="@color/white" />

    <TextView android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/typeEdit"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:hint="@string/type"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <Button
        android:id = "@+id/ajouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ajouter lieu"/>

    <Button
        android:id = "@+id/supprimerPremier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Supprimer le premier lieu"/>

    </LinearLayout>

</LinearLayout>
